to-do-list folder created

--- a/image-gallery/index.html
+++ b/image-gallery/index.html
@@ -8,47 +8,47 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <h1 class="titlebar">Image gallery</h1>
     <div class="container">
         <div>
-            <img src="images/panda1.jfif">
+            <img src="resource/panda1.jfif">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, deleniti.</p>
         </div>
 
         <div>
-            <img src="images/panda2.jfif">
+            <img src="resource/panda2.jfif">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, deleniti.</p>
         </div>
         <div>
-            <img src="images/panda3.jfif">
+            <img src="resource/panda3.jfif">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, deleniti.</p>
         </div>
         <div>
-            <img src="images/panda4.jfif">
+            <img src="resource/panda4.jfif">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, deleniti.</p>
         </div>
         <div>
-            <img src="images/panda5.jfif">
+            <img src="resource/panda5.jfif">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, deleniti.</p>
         </div>
         <div>
-            <img src="images/panda6.jfif">
+            <img src="resource/panda6.jfif">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, deleniti.</p>
         </div>
         <div>
-            <img src="images/panda7.jfif">
+            <img src="resource/panda7.jfif">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, deleniti.</p>
         </div>
         <div>
-            <img src="images/panda8.jfif">
+            <img src="resource/panda8.jfif">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, deleniti.</p>
         </div>
         <div>
-            <img src="images/panda9.jfif">
+            <img src="resource/panda9.jfif">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, deleniti.</p>
         </div>
     </div>
